--- a/scss/sections/_reviews.scss
+++ b/scss/sections/_reviews.scss
@@ -91,8 +91,12 @@
   }
 
   .reviews__slider {
-    display: flex;
+    display: none;
     justify-content: space-between;
+
+    @media (min-width: $breakpoint-lg) {
+      display: flex;
+    }
 
     &-dots {
       display: flex;
